# notas-musicais

./: .gitignore  mkdocs.yml  pyproject.toml
docs/stylesheets/: extra.css
